--- a/package.json
+++ b/package.json
@@ -1,55 +1,18 @@
 {
   "name": "react-spectre.css",
   "version": "0.1.0",
-  "main": "src/index.js",
-  "private": true,
-  "dependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.3",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "classnames": "^2.2.5",
-    "css-loader": "0.28.4",
-    "dotenv": "4.0.0",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "^2.0.1",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
-    "moment": "^2.18.1",
-    "noop": "^0.2.2",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
-    "promise": "8.0.1",
-    "react": "^16.0.0",
-    "react-dev-utils": "^4.1.0",
-    "react-dom": "^16.0.0",
-    "style-loader": "0.18.2",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.8.2",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:toshiaki61/react-spectre.css.git"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "flow": "flow"
+    "flow": "flow",
+    "rollup": "rollup -c config/rollup.config.prod.js",
+    "rollup:dev": "rollup -c config/rollup.config.dev.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -87,6 +50,10 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "react-flow-props-to-prop-types",
+      "external-helpers"
     ]
   },
   "eslintConfig": {
@@ -95,7 +62,61 @@
       "jsx-a11y/href-no-hash": "off"
     }
   },
+  "dependencies": {},
   "devDependencies": {
-    "flow-bin": "^0.56.0"
+    "autoprefixer": "7.1.2",
+    "babel": "^6.23.0",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react-app": "^3.0.3",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "classnames": "^2.2.5",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
+    "eslint": "4.4.1",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "flow-bin": "^0.56.0",
+    "from": "^0.1.7",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "import": "^0.0.6",
+    "jest": "20.0.4",
+    "lodash.noop": "^3.0.1",
+    "moment": "^2.18.1",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.6",
+    "promise": "8.0.1",
+    "prop-types": "^15.6.0",
+    "prop-types-extra": "^1.0.1",
+    "react": "15.5.0",
+    "react-dev-utils": "^4.1.0",
+    "react-dom": "15.5.0",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.8.2",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
   }
 }
