--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "flow": "flow",
     "build:lib": "node scripts/build-lib.js",
     "build:lib:dev": "node scripts/build-lib-dev.js",
-    "lib": "yarn build:lib && yarn build:lib:dev"
+    "lib": "yarn build:lib && yarn build:lib:dev",
+    "build:flow": "flow-copy-source -v -i '**/__tests__/**' src dist"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -59,7 +60,8 @@
       "react-app"
     ],
     "plugins": [
-      "react-flow-props-to-prop-types"
+      "react-flow-props-to-prop-types",
+      "transform-flow-strip-types"
     ]
   },
   "eslintConfig": {
@@ -77,6 +79,7 @@
     "babel-loader": "7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react-app": "^3.0.3",
     "babel-runtime": "6.26.0",
@@ -95,6 +98,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "flow-bin": "^0.56.0",
+    "flow-copy-source": "^1.2.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
