--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:toshiaki61/react-spectre.css.git"
+    "url": "git+https://github.com/toshiaki61/react-spectre.css.git"
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "flow": "flow",
-    "build:lib": "node scripts/build-lib.js",
-    "build:lib:dev": "node scripts/build-lib-dev.js",
-    "lib": "yarn build:lib && yarn build:lib:dev",
-    "build:flow": "flow-copy-source -v -i '**/__tests__/**' src dist"
+    "prod": "node scripts/build-lib.js",
+    "build": "yarn build:clean && yarn build:lib && yarn build:flow && yarn prod",
+    "build:clean": "rimraf lib",
+    "build:lib": "babel -d lib src --ignore '**/__tests__/**'",
+    "build:flow": "flow-copy-source -v -i '**/__tests__/**' src lib"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -57,68 +57,104 @@
           "modules": false
         }
       ],
-      "react-app"
+      "react"
     ],
     "plugins": [
+      "flow-react-proptypes",
       "react-flow-props-to-prop-types",
-      "transform-flow-strip-types"
-    ]
+      "transform-flow-strip-types",
+      "transform-object-rest-spread",
+      "transform-class-properties"
+    ],
+    "sourceMaps": true,
+    "retainLines": true
   },
   "eslintConfig": {
-    "extends": "react-app",
+    "env": {
+      "browser": true,
+      "node": true,
+      "jasmine": true
+    },
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "plugins": [
+      "flowtype"
+    ],
     "rules": {
-      "jsx-a11y/href-no-hash": "off"
+      "no-console": "off",
+      "object-curly-newline": "off",
+      "jsx-a11y/href-no-hash": "off",
+      "jsx-a11y/label-has-for": [
+        "error",
+        {
+          "required": {
+            "every": [
+              "id"
+            ]
+          },
+          "allowChildren": false
+        }
+      ],
+      "react/default-props-match-prop-types": "off"
     }
   },
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
+    "babel-loader": "7.1.2",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-flow-react-proptypes": "^24.0.1",
     "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react-app": "^3.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "classnames": "^2.2.5",
-    "css-loader": "0.28.4",
+    "classnames": "^2.2.6",
+    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
-    "eslint": "4.4.1",
-    "eslint-config-react-app": "^2.0.1",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
-    "flow-bin": "^0.56.0",
-    "flow-copy-source": "^1.2.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "flow-copy-source": "^2.0.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash.noop": "^3.0.1",
-    "moment": "^2.18.1",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.6",
+    "postcss-loader": "2.0.8",
+    "prettier": "^1.13.5",
     "promise": "8.0.1",
-    "prop-types": "^15.6.0",
-    "prop-types-extra": "^1.0.1",
-    "react": "16.0.0",
-    "react-dev-utils": "^4.1.0",
-    "react-dom": "16.0.0",
-    "style-loader": "0.18.2",
+    "prop-types": "^15.6.1",
+    "prop-types-extra": "^1.1.0",
+    "raf": "3.4.0",
+    "react": "^16.4.0",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.4.0",
+    "resolve": "1.6.0",
+    "rimraf": "^2.6.2",
+    "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.8.2",
-    "webpack-manifest-plugin": "1.2.1",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "peerDependencies": {
