--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-spectre.css",
-  "version": "0.1.0",
+  "version": "0.5.2",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
     "test": "node scripts/test.js --env=jsdom",
     "flow": "flow",
     "prod": "node scripts/build-lib.js",
-    "build": "yarn build:clean && yarn build:lib && yarn build:flow && yarn prod",
+    "build": "npm-run-all build:clean build:lib build:flow prod",
     "build:clean": "rimraf lib",
     "build:lib": "babel -d lib src --ignore '**/__tests__/**'",
     "build:flow": "flow-copy-source -v -i '**/__tests__/**' src lib"
@@ -101,6 +101,7 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "7.1.6",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "20.0.3",
@@ -117,6 +118,7 @@
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
     "css-loader": "0.28.7",
+    "date-fns": "^1.29.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "^4.19.1",
@@ -135,7 +137,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash.noop": "^3.0.1",
-    "moment": "^2.22.2",
+    "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -144,9 +146,11 @@
     "prop-types": "^15.6.1",
     "prop-types-extra": "^1.1.0",
     "raf": "3.4.0",
+    "ramda": "^0.25.0",
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
+    "recompose": "^0.27.1",
     "resolve": "1.6.0",
     "rimraf": "^2.6.2",
     "style-loader": "0.19.0",
@@ -160,7 +164,6 @@
   "peerDependencies": {
     "classnames": "^2.2.5",
     "lodash.noop": "^3.0.1",
-    "moment": "^2.18.1",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
