--- a/package.json
+++ b/package.json
@@ -162,14 +162,11 @@
     "whatwg-fetch": "2.0.3"
   },
   "peerDependencies": {
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "lodash.noop": "^3.0.1",
-    "object-assign": "4.1.1",
-    "promise": "8.0.1",
-    "prop-types": "^15.6.0",
-    "prop-types-extra": "^1.0.1",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "whatwg-fetch": "2.0.3"
+    "prop-types": "^15.6.1",
+    "prop-types-extra": "^1.1.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   }
 }
