--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
       "react/default-props-match-prop-types": "off"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.4.0"
+  },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.7",
@@ -143,7 +145,6 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "^23.6.0",
-    "lodash.noop": "^3.0.1",
     "npm-run-all": "^4.1.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -152,14 +153,11 @@
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "promise": "8.0.1",
-    "prop-types": "^15.6.1",
-    "prop-types-extra": "^1.1.0",
     "raf": "3.4.0",
     "ramda": "^0.25.0",
-    "react": "^16.5.2",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.5.2",
-    "recompose": "^0.27.1",
+    "react-dom": "^16.6.3",
+    "recompose": "^0.30.0",
     "resolve": "1.6.0",
     "rimraf": "^2.6.2",
     "style-loader": "0.19.0",
@@ -175,13 +173,5 @@
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
-  },
-  "peerDependencies": {
-    "classnames": "^2.2.6",
-    "lodash.noop": "^3.0.1",
-    "prop-types": "^15.6.1",
-    "prop-types-extra": "^1.1.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
   }
 }
