--- a/package.json
+++ b/package.json
@@ -9,169 +9,140 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "flow": "flow",
-    "prod": "node scripts/build-lib.js",
+    "test": "node scripts/test.js",
     "build": "tsc --build tsconfig.json",
     "clean": "rimraf dist"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/*.d.ts"
     ],
     "setupFiles": [
-      "<rootDir>/config/polyfills.js"
+      "react-app-polyfill/jsdom"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
+      "<rootDir>/src/**/__tests__/**/*.(j|t)s?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).(j|t)s?(x)"
     ],
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.test.json"
+      }
     },
     "moduleFileExtensions": [
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
       "web.js",
       "js",
-      "json",
       "web.jsx",
       "jsx",
+      "json",
       "node"
     ]
   },
   "babel": {
     "presets": [
-      [
-        "env",
-        {
-          "modules": false
-        }
-      ],
-      "react"
-    ],
-    "plugins": [
-      "flow-react-proptypes",
-      "react-flow-props-to-prop-types",
-      "transform-flow-strip-types",
-      "transform-object-rest-spread",
-      "transform-class-properties"
-    ],
-    "sourceMaps": true,
-    "retainLines": true
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "node": true,
-      "jasmine": true
-    },
-    "parser": "babel-eslint",
-    "extends": "airbnb",
-    "plugins": [
-      "flowtype"
-    ],
-    "rules": {
-      "no-console": "off",
-      "object-curly-newline": "off",
-      "jsx-a11y/href-no-hash": "off",
-      "jsx-a11y/label-has-for": [
-        "error",
-        {
-          "required": {
-            "every": [
-              "id"
-            ]
-          },
-          "allowChildren": false
-        }
-      ],
-      "react/default-props-match-prop-types": "off"
-    }
+      "react-app"
+    ]
   },
   "dependencies": {
-    "react": "^16.4.0"
+    "react": "^16.4.0",
+    "spectre.css": "0.5.5"
   },
   "devDependencies": {
+    "@babel/core": "7.1.0",
+    "@svgr/webpack": "2.4.1",
     "@types/classnames": "^2.2.6",
-    "@types/jest": "^23.3.7",
-    "@types/lodash.noop": "^3.0.4",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.6",
     "@types/ramda": "^0.25.39",
-    "@types/react": "^16.7.3",
-    "@types/react-dom": "^16.0.9",
-    "autoprefixer": "7.1.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-flow-react-proptypes": "^24.0.1",
-    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-react-app": "^3.1.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "classnames": "^2.2.6",
-    "css-loader": "0.28.7",
-    "date-fns": "^1.29.0",
-    "dotenv": "4.0.0",
+    "@types/react": "16.7.3",
+    "@types/react-dom": "16.0.9",
+    "@types/react-grid-layout": "^0.16.5",
+    "@types/react-table": "^6.7.15",
+    "@types/recharts": "^1.1.1",
+    "@types/webpack": "^4.4.19",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-named-asset-import": "^0.2.0",
+    "babel-preset-react-app": "^5.0.0",
+    "bfj": "6.1.1",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "chalk": "2.4.1",
+    "css-loader": "1.0.0",
+    "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^5.7.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-typescript": "^0.12.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
-    "flow-copy-source": "^2.0.0",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "^23.6.0",
-    "npm-run-all": "^4.1.3",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "prettier": "^1.14.3",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "promise": "8.0.1",
-    "raf": "3.4.0",
+    "eslint": "5.6.0",
+    "eslint-config-react-app": "^3.0.0",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin": "0.4.15",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-alpha.2",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "23.6.0",
+    "mini-css-extract-plugin": "0.4.4",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.4.0",
+    "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.15.2",
+    "raf": "3.4.1",
     "ramda": "^0.25.0",
-    "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.6.3",
-    "recompose": "^0.30.0",
-    "resolve": "1.6.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "0.19.0",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^5.2.2",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3",
-    "typescript-eslint-parser": "^20.0.0",
-    "url-loader": "0.6.2",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "react-dev-utils": "^6.1.1",
+    "resolve": "1.8.1",
+    "rxjs-tslint-rules": "^4.11.0",
+    "sass-loader": "7.1.0",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.1.0",
+    "thread-loader": "1.2.0",
+    "ts-jest": "23.10.4",
+    "ts-loader": "5.3.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.16.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.6",
+    "url-loader": "1.1.2",
+    "webpack": "4.25.1",
+    "webpack-dev-server": "3.1.10",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "3.6.3"
   }
 }
