replace build command --build -> -p

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "test": "node scripts/test.js",
-    "build": "tsc --build tsconfig.json",
+    "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist"
   },
   "eslintConfig": {
