--- a/package.json
+++ b/package.json
@@ -74,21 +74,20 @@
     ]
   },
   "dependencies": {
-    "react": "^16.4.0",
+    "date-fns": "^1.30.1",
+    "react": "^16.6.3",
     "spectre.css": "0.5.6"
   },
   "devDependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
     "@types/classnames": "^2.2.6",
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.10",
-    "@types/ramda": "^0.25.42",
-    "@types/react": "16.7.7",
-    "@types/react-dom": "16.0.10",
-    "@types/react-grid-layout": "^0.16.5",
-    "@types/react-table": "^6.7.17",
-    "@types/recharts": "^1.1.1",
+    "@types/date-fns": "^2.6.0",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.15",
+    "@types/ramda": "^0.25.44",
+    "@types/react": "16.7.17",
+    "@types/react-dom": "16.0.11",
     "@types/webpack": "^4.4.19",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -121,7 +120,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.4.0",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "^1.15.2",
+    "prettier": "^1.15.3",
     "raf": "3.4.1",
     "ramda": "^0.25.0",
     "react-dev-utils": "^6.1.1",
@@ -136,9 +135,9 @@
     "ts-loader": "5.3.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.2.2",
     "url-loader": "1.1.2",
     "webpack": "4.25.1",
     "webpack-dev-server": "3.1.10",
