--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,30 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "es2017"],
-    "module": "esnext",
-    "declaration": true,
-    "outDir": "./dist",
-    "target": "es5",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
-    "sourceMap": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "importHelpers": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "allowSyntheticDefaultImports": true
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "lib": ["esnext", "dom"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "noImplicitAny": false,
+    "paths": {
+      "@components*": ["src/components*"],
+      "@elements*": ["src/elements*"],
+      "@features*": ["src/features*"],
+      "@experimentals*": ["src/experimentals*"],
+      "@layouts*": ["src/layouts*"],
+      "@utils*": ["src/utilities*"]
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": false,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es5"
   },
-  "include": ["src"],
-  "exclude": ["dist", "node_modules", "src/index.tsx"]
+  "include": ["src", "stories"]
 }
