--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -82,8 +83,8 @@
   "dependencies": {
     "date-fns": "^1.30.1",
     "formik": "^1.4.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "spectre.css": "0.5.8"
   },
   "devDependencies": {
@@ -96,6 +97,7 @@
     "@storybook/addon-options": "^4.1.4",
     "@storybook/addons": "^4.1.4",
     "@storybook/react": "^4.1.4",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@svgr/webpack": "4.1.0",
     "@types/classnames": "^2.2.7",
     "@types/http-proxy-middleware": "^0.19.1",
