--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-typescript": "^7.1.0",
+    "@personare/react-storybook-decorator-github-corner": "^0.1.5",
     "@storybook/addon-actions": "^4.1.4",
     "@storybook/addon-info": "^4.1.4",
     "@storybook/addon-knobs": "^4.1.4",
