--- a/package.json
+++ b/package.json
@@ -82,9 +82,8 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
-    "formik": "^1.4.1",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "spectre.css": "0.5.8"
   },
   "devDependencies": {
