--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "rimraf dist",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "chromatic": "chromatic test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -84,7 +85,8 @@
     "date-fns": "^1.30.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "spectre.css": "0.5.8"
+    "spectre.css": "0.5.8",
+    "storybook-chromatic": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
