--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,7 +7,7 @@
     "target": "es5",
     "esModuleInterop": true,
     "sourceMap": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
