--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "deploy-storybook": "storybook-to-ghpages",
-    "chromatic": "chromatic test"
+    "chromatic": "chromatic test",
+    "postinstall": "npm build"
   },
   "eslintConfig": {
     "extends": "react-app"
