--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build-storybook": "build-storybook -s public",
     "deploy-storybook": "storybook-to-ghpages",
     "chromatic": "chromatic test",
-    "postinstall": "npm run-script build"
+    "postinstall": "postinstall-build dist"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "date-fns": "^1.30.1",
+    "postinstall-build": "^5.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "spectre.css": "0.5.8",
