--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "react-spectre.css",
   "version": "0.5.16",
-  "main": "dist-cjs/index.js",
-  "types": "dist-cjs/index.d.ts",
-  "module": "dist-esm/index.js",
+  "main": "dist/cjs/index.js",
+  "types": "dist/cjs/index.d.ts",
+  "module": "dist/esm/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toshiaki61/react-spectre.css.git"
   },
   "scripts": {
     "build": "npm-run-all clean -s build:cjs build:esm",
-    "prebuild:cjs": "shx mkdir -p dist-cjs",
-    "prebuild:esm": "shx mkdir -p dist-esm",
-    "build:cjs": "tsc --project ./tsconfig.json --module commonjs --outDir ./dist-cjs",
-    "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir ./dist-esm",
+    "prebuild:cjs": "shx mkdir -p dist/cjs",
+    "prebuild:esm": "shx mkdir -p dist/esm",
+    "build:cjs": "tsc --project ./tsconfig.json --module commonjs --outDir ./dist/cjs",
+    "build:esm": "tsc --project ./tsconfig.json --module es2015 --outDir ./dist/esm",
     "test": "react-scripts test",
-    "clean": "shx rm -rf dist-*",
+    "clean": "shx rm -rf dist",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "deploy-storybook": "storybook-to-ghpages",
@@ -47,7 +47,7 @@
     "spectre.css": "0.5.8"
   },
   "devDependencies": {
-    "@personare/react-storybook-decorator-github-corner": "^0.1.5",
+    "@babel/core": "^7.4.4",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
@@ -68,15 +68,23 @@
     "@types/storybook__addon-links": "^3.3.4",
     "@types/storybook__addon-options": "^4.0.1",
     "@types/storybook__react": "^4.0.1",
+    "babel-loader": "^8.0.5",
+    "eslint": "5.x",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "react-docgen-typescript": "^1.12.4",
     "react-docgen-typescript-loader": "^3.1.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "react-element-to-jsx-string": "^14.0.2",
     "react-scripts": "^3.0.0",
     "shx": "^0.3.2",
+    "storybook-addon-react-live-edit": "https://github.com/toshiaki61/storybook-addon-react-live-edit.git#master",
     "storybook-chromatic": "^1.3.3",
     "storybook-readme": "^5.0.3",
+    "ts-loader": "^5.4.5",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
