--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "jsx": "react",
-    "lib": ["esnext", "dom"],
+    "jsx": "preserve",
+    "lib": [
+      "esnext",
+      "dom"
+    ],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -14,9 +17,25 @@
     "strict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "rootDirs": ["src", "stories"],
-    "typeRoots": ["src/types", "stories/types"]
+    "rootDirs": [
+      "src",
+      "stories"
+    ],
+    "typeRoots": [
+      "src/types",
+      "stories/types"
+    ],
+    "allowJs": true,
+    "module": "esnext",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true
   },
-  "include": ["src", "stories"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src",
+    "stories"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
